--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -9,9 +9,18 @@
     android:background="@drawable/backcolor"
     >
 
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/bottomop"
+    android:text="option"
+    >
 
+</Button>
 
     <com.github.mikephil.charting.charts.PieChart
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/bottomop"
         android:id="@+id/chart"
         android:innerRadius="100dp"
         android:layout_width="250dp"
@@ -19,4 +28,45 @@
         ></com.github.mikephil.charting.charts.PieChart>
 
 
+    <TextView
+        android:id="@+id/textBMI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/chart"
+        android:layout_marginTop="0dp"
+        android:text="BMI"
+        android:textSize="25sp"></TextView>
+
+    <TextView
+        android:id="@+id/textBMR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/chart"
+        android:layout_alignLeft="@id/textBMI"
+        android:layout_marginLeft="89dp"
+        android:layout_marginTop="-1dp"
+        android:text="BMR"
+        android:textSize="25sp"></TextView>
+
+    <TextView
+        android:id="@+id/textTDEE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/chart"
+        android:layout_alignLeft="@id/textBMI"
+        android:layout_marginLeft="185dp"
+        android:layout_marginTop="-1dp"
+        android:text="TDEE"
+        android:textSize="25sp"></TextView>
+
+    <TextView
+        android:id="@+id/texttarget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/chart"
+        android:layout_alignLeft="@id/textBMI"
+        android:layout_marginLeft="284dp"
+        android:layout_marginTop="0dp"
+        android:text="Target"
+        android:textSize="25sp"></TextView>
 </RelativeLayout>
