--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -4,95 +4,168 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".Home_User"
     android:id="@+id/home_user"
     android:background="@drawable/backcolor"
     >
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/R1"
+    android:background="@color/colorPrimaryDark"
+    >
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/bottomop"
     android:text="option"
-    >
+    ></Button>
+</RelativeLayout>
 
-</Button>
-
+    <RelativeLayout
+        android:id="@+id/R2"
+        android:layout_below="@id/R1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        >
     <com.github.mikephil.charting.charts.PieChart
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/bottomop"
         android:id="@+id/chart"
         android:innerRadius="100dp"
         android:layout_width="250dp"
         android:layout_height="250dp"
         ></com.github.mikephil.charting.charts.PieChart>
+    </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/R3"
+        android:layout_below="@id/R2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:weightSum="4"
+        android:orientation="horizontal"
+        >
     <TextView
         android:id="@+id/numberBMI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/chart"
         android:text="0"
+        android:background="#ff3399"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
         android:textSize="25sp"></TextView>
 
     <TextView
         android:id="@+id/numberBMR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/chart"
         android:text="0"
+        android:gravity="center_horizontal"
+        android:background="#3399ff"
+        android:layout_weight="1"
         android:textSize="25sp"></TextView>
 
     <TextView
         android:id="@+id/numberTDEE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/chart"
         android:text="0"
+        android:gravity="center_horizontal"
+        android:background="#ff00ff"
+        android:layout_weight="1"
         android:textSize="25sp"></TextView>
     <TextView
         android:id="@+id/numberTargete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/chart"
         android:text="0"
+        android:layout_weight="1"
+        android:background="#ff0000"
+        android:gravity="center_horizontal"
         android:textSize="25sp"></TextView>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textBMI"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/R4"
+        android:layout_width="match_parent"
+        android:layout_below="@id/R3"
+        android:weightSum="4"
         android:layout_height="wrap_content"
-        android:layout_below="@id/numberBMI"
-        android:text="BMI"
-        android:textSize="25sp"></TextView>
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal"
 
-    <TextView
-        android:id="@+id/textBMR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/numberBMR"
-        android:layout_alignLeft="@id/textBMI"
-        android:layout_marginLeft="85dp"
-        android:text="BMR"
-        android:textSize="25sp"></TextView>
+        >
+
+        <TextView
+            android:id="@+id/textBMI"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#ff0000"
+            android:gravity="center_horizontal"
+            android:text="BMI"
+            android:textSize="25sp"></TextView>
+
+        <TextView
+            android:id="@+id/textBMR"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#ff3399"
+            android:gravity="center_horizontal"
+            android:text="BMR"
+            android:textSize="25sp"></TextView>
+
 
     <TextView
         android:id="@+id/textTDEE"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/numberTDEE"
-        android:layout_alignLeft="@id/textBMI"
-        android:layout_marginLeft="181dp"
         android:text="TDEE"
+        android:layout_weight="1"
+        android:background="#3399ff"
+        android:gravity="center_horizontal"
         android:textSize="25sp"></TextView>
 
     <TextView
         android:id="@+id/texttarget"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="Target"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:background="#ff00ff"
+        android:textSize="25sp"></TextView>
+
+    </LinearLayout>
+
+
+
+    <RelativeLayout
+        android:id="@+id/R5"
+        android:layout_width="match_parent"
+        android:layout_below="@id/R4"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        >
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/numberTargete"
-        android:layout_alignLeft="@id/textBMI"
-        android:layout_marginLeft="283dp"
-        android:text="Target"
-        android:textSize="25sp"></TextView>
+        android:id="@+id/addfood"
+        android:text="AddFood"
+        android:layout_marginTop="30sp"
+        ></Button>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addworkout"
+        android:text="addworkout"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="30sp"
+        ></Button>
+    </RelativeLayout>
 </RelativeLayout>
