refactor(Mobile):เก็บหน้า connect

--- a/app/src/main/res/layout/activity_connect_user.xml
+++ b/app/src/main/res/layout/activity_connect_user.xml
@@ -5,55 +5,68 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".connect_user"
-    android:background="@drawable/backcolor">
+    android:gravity="center"
+    android:background="@drawable/bacckground_color">
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/L1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="30sp"
         android:gravity="center"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_centerHorizontal="true"
             android:id="@+id/H1"
-            android:text="LOGO"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25"
-            />
+            android:text="Logo"
 
-        <Button
-            android:layout_width="183dp"
-            android:layout_height="49dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/L2"
+        android:layout_below="@id/L1"
+        android:layout_marginBottom="30sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
+
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Register"
+        android:layout_marginLeft="30sp"
+        android:layout_marginRight="30sp"
+        android:background="@drawable/button_style"
             android:id="@+id/b2"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/b1"
-            tools:layout_editor_absoluteX="114dp"
-            tools:layout_editor_absoluteY="354dp"
             ></Button>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/L3"
+        android:layout_below="@id/L2"
+        android:layout_marginBottom="30sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
         <Button
             android:id="@+id/b1"
-            android:layout_width="173dp"
-            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_style"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
             android:layout_below="@id/H1"
-            android:layout_marginTop="6dp"
-            android:gravity="center"
             android:text="Login"
-            tools:layout_editor_absoluteX="114dp"
-            tools:layout_editor_absoluteY="252dp"
             ></Button>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
