--- a/app/src/main/res/layout/activity_totalkcal__user.xml
+++ b/app/src/main/res/layout/activity_totalkcal__user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Totalkcal_User"
-    android:background="@drawable/backcolor">
+    android:background="@drawable/bacckground_color">
 
     <LinearLayout
         android:layout_width="match_parent"
