--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".Home_User"
     android:id="@+id/home_user"
-    android:background="@drawable/backcolor"
+    android:background="@drawable/bacckground_color"
     >
 <RelativeLayout
     android:layout_width="match_parent"
