refactor(moblie):เก็บรายละเอียด UI

--- a/app/src/main/res/layout/activity_connect_user.xml
+++ b/app/src/main/res/layout/activity_connect_user.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/H1"
             android:text="Logo"
+            android:textSize="50sp"
 
             />
     </LinearLayout>
