--- a/app/src/main/res/layout/activity_register__user.xml
+++ b/app/src/main/res/layout/activity_register__user.xml
@@ -75,12 +75,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-        <TextView
-            android:id="@+id/text3"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/ti_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2.5"
-            android:text="ConPassword"></TextView>
+            android:layout_below="@+id/img_logo"
+            android:layout_marginTop="@dimen/child_margin_top">
+
+
 
         <EditText
             android:id="@+id/e3"
@@ -89,6 +91,7 @@
             android:layout_below="@id/e2"
             android:layout_weight="1"
             ></EditText>
+        </android.support.design.widget.TextInputLayout>
 </LinearLayout>
 
     <LinearLayout
